--- a/2.html
+++ b/2.html
@@ -15,7 +15,7 @@
 <p><br>당신이 몸담고 있는 전공과 전문 분야,</br>
 <br>직업과 일터가 바로 선교지다!</br>
 <br><h3>최초의 ‘영역선교(8 Mind Molders)’ 입문서</h3></br></p>
-
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/IkZ2Dmg_Cc8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 <p>정치는 정말 추하고 속된 일인가?. 기독교 기업은 오로지 선교비를 후원하기 위해 존재하는가? 과학자가 신앙을 가질 수 있는가? 방송이나 연예계의 그리스도인이 주님을 위해 할 수 있는 일은 어떤 것인가?
 ‘정치, 경제, 과학 기술, 교회(종교), 가정, 교육, 커뮤니케이션, 예술’의 8가지 영역으로 구성된 사회 분야에 대한 하나님의 계획과 뜻을 구약성경을 통해 알아보며, 나라 전체를 변화시키는 길을 다룬 ‘영역 선교’ 입문서다. 당신을 나라 전체의 빛과 소금으로 변화시켜 줄 메시지를 읽고 도전 받으라! </p>
 </body>
