--- a/1.html
+++ b/1.html
@@ -15,5 +15,26 @@
 <p><a href="https://ko.wikipedia.org/wiki/%EC%84%B8%EA%B3%84%EA%B4%80" target="_blank" title="위키백과 세계관">세계관</a>은 우리의 가치관과 견해를 형성하고, 우리 삶에 무엇이 가장 중요한지를 결정한다. 또한 <<strong><u>세계관은</u> 우리가 무엇을 어떻게 보는지를 결정한다.</strong></p>
 <img src="life.jpg" width="100%">
 <p>성경적 세계관 : 부르심이라는 관점에서 일을 이해하고 하나님께 끊임없이 영광 돌리는 기회라는 관점에서 삶을 이해하는 것</p>
+<p>
+  <div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://life-work.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</p>
 </body>
 </html>
